--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.422 $
+    $Revision: 1.434 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -336,8 +336,9 @@ IMAP SERVERS
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
        6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
-       Exchange2007-EP-SP2, 
-       Exchange 2010 RTM (Release to Manufacturing) [host2]
+       Exchange2007-EP-SP2,
+       Exchange 2010 RTM (Release to Manufacturing) [host2],
+       Exchange 2010 SP1 RU2[host2],
      - Mirapoint
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
@@ -357,7 +358,8 @@ IMAP SERVERS
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - Imap part of TCP/IP suite of VMS 7.3.2
-     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 5.5, 6.x
+     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 
+       Zimbra 5.0.24_GA_3356.RHEL4 [host1], 5.5, 6.x
 
     Please report to the author any success or bad story with imapsync and
     do not forget to mention the IMAP server software names and version on
@@ -422,5 +424,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.422 2011/05/08 17:21:38 gilles Exp gilles $
+    $Id: imapsync,v 1.434 2011/05/16 07:16:19 gilles Exp gilles $
 
