--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.96 2011/04/26 10:48:03 gilles Exp gilles $
+# $Id: TODO,v 1.97 2011/05/16 16:39:38 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -23,17 +23,14 @@ Evaluate
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 
-Fix Exchange 2010 SP1 issue with --foldersizes when
-host2 folders don't exist. $imap->exists calls STATUS.
-Is it RFC compliant or an Exchange bug?
-Exchange quit after 10 errors.
+Fix long path over than 256 character on Win32. 
+Think about Digest::SHA or Digest::SHA::PurePerl.
 
 Fix "\Forwarded" flag bug in courier.
 Does \lalala can be forbidden (courier does a 
 "16 NO Error in IMAP command received by server"
 with 
 * OK [PERMANENTFLAGS (\* \Draft \Answered \Flagged \Deleted \Seen)] Limited
-
 
 
 Suggestion: it's very difficult to track down messages which are behaving
@@ -158,6 +155,13 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Make --usecache works with --maxage --maxsize etc.
+
+DONE. Fix Exchange 2010 SP1 issue with --foldersizes when
+host2 folders don't exist. $imap->exists calls STATUS.
+Is it RFC compliant or an Exchange bug?
+Exchange quit after 10 errors.
 
 DONE. Make --delete2 works with --useuid
 
