--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,67 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.434
+head: 1.446
 branch:
 locks: strict
-	gilles: 1.434
+	gilles: 1.446
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 434;	selected revisions: 434
+total revisions: 446;	selected revisions: 446
 description:
 ----------------------------
-revision 1.434	locked by: gilles;
+revision 1.446	locked by: gilles;
+date: 2011/05/31 09:11:18;  author: gilles;  state: Exp;  lines: +17 -17
+Bugfix. Try to handle Markus bug in foldersizes() when select_msgs() returns a list of undef.
+----------------------------
+revision 1.445
+date: 2011/05/31 08:00:45;  author: gilles;  state: Exp;  lines: +53 -46
+Check if uidexpunge is supported at the beginning of execution, not when needed.
+Set --uidexpunge2 if --delete2 or --expunge2 if uidexpunge not supported.
+Changed all warn() calls (STDERR) to print calls (STDOUT)
+----------------------------
+revision 1.444
+date: 2011/05/30 15:16:46;  author: gilles;  state: Exp;  lines: +10 -7
+good_date() "24 Aug 77" -> "24-Aug-1977"
+----------------------------
+revision 1.443
+date: 2011/05/28 16:50:27;  author: gilles;  state: Exp;  lines: +125 -41
+ Patched tests_good_date() and good_date() with Dax Kelson patches.
+----------------------------
+revision 1.442
+date: 2011/05/28 16:14:31;  author: gilles;  state: Exp;  lines: +28 -8
+Started code to deal with epoch of messages.
+----------------------------
+revision 1.441
+date: 2011/05/26 01:01:25;  author: gilles;  state: Exp;  lines: +14 -11
+Handle better folder creation, not a failure when folder "already exists" during its creation.
+----------------------------
+revision 1.440
+date: 2011/05/26 00:40:51;  author: gilles;  state: Exp;  lines: +28 -28
+Replaced default setting. Now --delete2 sets --uidexpunge2 instead of --expunge2 (unless --nouidexpunge2 is set)
+----------------------------
+revision 1.439
+date: 2011/05/25 03:11:41;  author: gilles;  state: Exp;  lines: +65 -9
+Added epoch() routine to prepare the safe bidirectional sync (maybe...)
+----------------------------
+revision 1.438
+date: 2011/05/25 00:47:27;  author: gilles;  state: Exp;  lines: +9 -8
+Adapted the usage output multiline character to Unix or Win, \ or ^
+----------------------------
+revision 1.437
+date: 2011/05/25 00:29:04;  author: gilles;  state: Exp;  lines: +8 -7
+Bugfix. Avoid a "no number" warning when size is null.
+----------------------------
+revision 1.436
+date: 2011/05/23 23:30:20;  author: gilles;  state: Exp;  lines: +8 -12
+Added "Date" in the default --useheader list. ("Message-Id", "Message-ID", "Date")
+----------------------------
+revision 1.435
+date: 2011/05/23 23:06:31;  author: gilles;  state: Exp;  lines: +29 -12
+Bugfix. Bad header beginning with a blank character.
+----------------------------
+revision 1.434
 date: 2011/05/16 07:16:19;  author: gilles;  state: Exp;  lines: +142 -57
 Bugfix. Made --usecache work with --maxage or --maxsize or --min*
 ----------------------------
