--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.97 2011/05/16 16:39:38 gilles Exp gilles $
+# $Id: TODO,v 1.98 2011/05/30 21:59:06 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -22,6 +22,8 @@ http://www.linux-france.org/prj/imapsync_list/msg00307.html
 Evaluate 
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
+
+Find a way to avoid passwords in --debugimap unless needed.
 
 Fix long path over than 256 character on Win32. 
 Think about Digest::SHA or Digest::SHA::PurePerl.
