--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,42 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.446
+head: 1.452
 branch:
 locks: strict
-	gilles: 1.446
+	gilles: 1.452
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 446;	selected revisions: 446
+total revisions: 452;	selected revisions: 452
 description:
 ----------------------------
-revision 1.446	locked by: gilles;
+revision 1.452	locked by: gilles;
+date: 2011/07/11 00:29:06;  author: gilles;  state: Exp;  lines: +64 -47
+Added the --search option allowing to select messages with the powerful IMAP SEARCH command.
+----------------------------
+revision 1.451
+date: 2011/06/30 11:44:38;  author: gilles;  state: Exp;  lines: +7 -8
+Added IO::Socket::INET version info.
+----------------------------
+revision 1.450
+date: 2011/06/21 00:17:20;  author: gilles;  state: Exp;  lines: +7 -7
+Bugfix. Fixed ps call to work with Solaris 10. Thanks to Daniel Rohde.
+----------------------------
+revision 1.449
+date: 2011/06/16 12:20:42;  author: gilles;  state: Exp;  lines: +13 -10
+Kerio 7.2.0P1 success.
+MDaemon 12.0.3 success.
+----------------------------
+revision 1.448
+date: 2011/06/03 00:54:15;  author: gilles;  state: Exp;  lines: +9 -9
+Bugfix. Date reference to select messages with --maxdate --mindate is the beginning of imapsync run now.
+----------------------------
+revision 1.447
+date: 2011/06/02 00:01:01;  author: gilles;  state: Exp;  lines: +13 -13
+Added PERMANENTFLAGS output with --debugflags
+----------------------------
+revision 1.446
 date: 2011/05/31 09:11:18;  author: gilles;  state: Exp;  lines: +17 -17
 Bugfix. Try to handle Markus bug in foldersizes() when select_msgs() returns a list of undef.
 ----------------------------
