--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.446 $
+    $Revision: 1.452 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -294,7 +294,7 @@ IMAP SERVERS
        Patient and confident testers are welcome.
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following 41 imap servers (software
+    Success stories reported with the following 44 imap servers (software
     names are in alphabetic order):
 
      - 1und1 H mimap1 84498 [host1]
@@ -331,8 +331,10 @@ IMAP SERVERS
      - hMailServer 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
+     - Kerio 7.2.0P1 [host1]
      - MailEnable 4.23 [host1] [host2]
-     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 12 [host2]
+     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 12 [host2],
+       12.0.3 [host1]
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
        6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
@@ -357,7 +359,7 @@ IMAP SERVERS
        (RedHat uses UW like 2003.338rh), v12.264 Solaris 5.7 (OSI Approved) 
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
-     - Imap part of TCP/IP suite of VMS 7.3.2
+     - VMS, Imap part of TCP/IP suite of VMS 7.3.2
      - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 
        Zimbra 5.0.24_GA_3356.RHEL4 [host1], 5.5, 6.x
 
@@ -424,5 +426,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.446 2011/05/31 09:11:18 gilles Exp gilles $
+    $Id: imapsync,v 1.452 2011/07/11 00:29:06 gilles Exp gilles $
 
