--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.98 2011/05/30 21:59:06 gilles Exp gilles $
+# $Id: TODO,v 1.100 2011/07/11 01:09:39 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -24,6 +24,8 @@ http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 
 Find a way to avoid passwords in --debugimap unless needed.
+
+Explain that users can win time/bandwidth by using --expunge
 
 Fix long path over than 256 character on Win32. 
 Think about Digest::SHA or Digest::SHA::PurePerl.
@@ -157,6 +159,8 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Add --search option allowing to select messages with any IMAP SEARCH command.
 
 DONE. Make --usecache works with --maxage --maxsize etc.
 
