--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,33 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.452
+head: 1.456
 branch:
 locks: strict
-	gilles: 1.452
+	gilles: 1.456
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 452;	selected revisions: 452
+total revisions: 456;	selected revisions: 456
 description:
 ----------------------------
-revision 1.452	locked by: gilles;
+revision 1.456	locked by: gilles;
+date: 2011/08/24 04:21:30;  author: gilles;  state: Exp;  lines: +15 -13
+Help message on --sep when namespace separator is NIL. Yahoo case.
+----------------------------
+revision 1.455
+date: 2011/07/29 03:00:25;  author: gilles;  state: Exp;  lines: +8 -8
+Empty default value for $h1_flags $h2_flags to avoid useless Perl warnings.
+----------------------------
+revision 1.454
+date: 2011/07/15 16:17:06;  author: gilles;  state: Exp;  lines: +22 -10
+file.csv example
+----------------------------
+revision 1.453
+date: 2011/07/15 00:35:37;  author: gilles;  state: Exp;  lines: +10 -6
+MDaemon 12.0.3 failure as host2 (APPEND buggy)
+----------------------------
+revision 1.452
 date: 2011/07/11 00:29:06;  author: gilles;  state: Exp;  lines: +64 -47
 Added the --search option allowing to select messages with the powerful IMAP SEARCH command.
 ----------------------------
