--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.100 2011/07/11 01:09:39 gilles Exp gilles $
+# $Id: TODO,v 1.101 2011/08/24 06:50:30 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -36,6 +36,8 @@ Does \lalala can be forbidden (courier does a
 with 
 * OK [PERMANENTFLAGS (\* \Draft \Answered \Flagged \Deleted \Seen)] Limited
 
+Add an option to log both on screen and append to a file.
+At least document the tee command solution (Unix and Windows)
 
 Suggestion: it's very difficult to track down messages which are behaving
 funny during the sync. It would be great - and presumably easy to code -
