--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.452 $
+    $Revision: 1.456 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -293,6 +293,9 @@ IMAP SERVERS
      - DBMail 0.9, 2.0.7 (GPL). But DBMail 1.2.1 is supported.
        Patient and confident testers are welcome.
      - Imail 7.04 (maybe).
+     - (2011) MDaemon 12.0.3 as host2 but MDaemon is supported as host1.
+       MDaemon is simply buggy with the APPEND IMAP command with 
+       any IMAP email client.
 
     Success stories reported with the following 44 imap servers (software
     names are in alphabetic order):
@@ -387,14 +390,26 @@ HUGE MIGRATION
 
     The file.csv file contains:
 
-    user0001;password0001;user0002;password0002
-    user0011;password0011;user0012;password0012 ...
+    user001_1;password001_1;user001_2;password001_2
+    user002_1;password002_1;user002_2;password002_2
+    user003_1;password003_1;user003_2;password003_2
+    user004_1;password004_1;user004_2;password004_2
+    user005_1;password005_1;user005_2;password005_2 ...
 
-    And the shell program is just:
+    On Unix the shell program can be:
 
      { while IFS=';' read  u1 p1 u2 p2; do 
-            imapsync --user1 "$u1" --password1 "$p1" --user2 "$u2" --password2 "$p2" ...
+            imapsync --host1 imap.side1.org --user1 "$u1" --password1 "$p1" \
+                     --host2 imap.side2.org --user2 "$u2" --password2 "$p2" ...
      done ; } < file.csv
+
+    On Windows the batch program can be:
+
+      FOR /F "tokens=1,2,3,4 delims=; eol=#" %%G IN (file.csv) DO imapsync ^
+      --host1 imap.side1.org --user1 %%G --password1 %%H ^
+      --host2 imap.side2.org --user2 %%I --password2 %%J ...
+
+    The ... have to be replaced by nothing or any imapsync option.
 
     Welcome in shell programming !
 
@@ -426,5 +441,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.452 2011/07/11 00:29:06 gilles Exp gilles $
+    $Id: imapsync,v 1.456 2011/08/24 04:21:30 gilles Exp gilles $
 
