--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,46 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.456
+head: 1.463
 branch:
 locks: strict
-	gilles: 1.456
+	gilles: 1.463
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 456;	selected revisions: 456
+total revisions: 463;	selected revisions: 463
 description:
 ----------------------------
-revision 1.456	locked by: gilles;
+revision 1.463	locked by: gilles;
+date: 2011/11/12 21:58:52;  author: gilles;  state: Exp;  lines: +9 -7
+--subscribe is on by defaut.
+----------------------------
+revision 1.462
+date: 2011/10/16 23:48:58;  author: gilles;  state: Exp;  lines: +14 -11
+Added --nocacheaftercopy to avoid bad uids in cache with --useuid or --usecache and strange uid generator like dbmail 2.2.17
+----------------------------
+revision 1.461
+date: 2011/10/07 21:02:15;  author: gilles;  state: Exp;  lines: +8 -8
+MailEnable
+Mirapoint
+----------------------------
+revision 1.460
+date: 2011/09/21 20:19:46;  author: gilles;  state: Exp;  lines: +8 -8
+Avoid Perl warning 'Use of uninitialized value $uid1 in exists'. Thanks to Klaus Franken
+----------------------------
+revision 1.459
+date: 2011/09/21 20:10:38;  author: gilles;  state: Exp;  lines: +7 -7
+Kerio 7.2.0 Patch 1 as host2
+----------------------------
+revision 1.458
+date: 2011/08/24 22:26:20;  author: gilles;  state: Exp;  lines: +7 -6
+Yahoo host1 success.
+----------------------------
+revision 1.457
+date: 2011/08/24 21:55:56;  author: gilles;  state: Exp;  lines: +10 -10
+Renamed file.csv to file.txt
+----------------------------
+revision 1.456
 date: 2011/08/24 04:21:30;  author: gilles;  state: Exp;  lines: +15 -13
 Help message on --sep when namespace separator is NIL. Yahoo case.
 ----------------------------
