--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.456 $
+    $Revision: 1.463 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -334,8 +334,8 @@ IMAP SERVERS
      - hMailServer 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
-     - Kerio 7.2.0P1 [host1]
-     - MailEnable 4.23 [host1] [host2]
+     - Kerio 7.2.0 Patch 1 [host1] [host2]
+     - MailEnable 4.23 [host1] [host2], 4.26 [host1][host2], 5 [host1]
      - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 12 [host2],
        12.0.3 [host1]
      - Mercury 4.1 (Windows server 2000 platform)
@@ -344,7 +344,7 @@ IMAP SERVERS
        Exchange2007-EP-SP2,
        Exchange 2010 RTM (Release to Manufacturing) [host2],
        Exchange 2010 SP1 RU2[host2],
-     - Mirapoint
+     - Mirapoint, 4.1.9-GA [host1]
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
      - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
@@ -363,6 +363,7 @@ IMAP SERVERS
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - VMS, Imap part of TCP/IP suite of VMS 7.3.2
+     - Yahoo [host1]
      - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 
        Zimbra 5.0.24_GA_3356.RHEL4 [host1], 5.5, 6.x
 
@@ -385,10 +386,10 @@ HUGE MIGRATION
     --maxage --minage --maxsize --useheader --fast --useuid --usecache
 
     If you have many mailboxes to migrate think about a little shell
-    program. Write a file called file.csv (for example) containing users and
+    program. Write a file called file.txt (for example) containing users and
     passwords. The separator used in this example is ';'
 
-    The file.csv file contains:
+    The file.txt file contains:
 
     user001_1;password001_1;user001_2;password001_2
     user002_1;password002_1;user002_2;password002_2
@@ -401,11 +402,11 @@ HUGE MIGRATION
      { while IFS=';' read  u1 p1 u2 p2; do 
             imapsync --host1 imap.side1.org --user1 "$u1" --password1 "$p1" \
                      --host2 imap.side2.org --user2 "$u2" --password2 "$p2" ...
-     done ; } < file.csv
+     done ; } < file.txt
 
     On Windows the batch program can be:
 
-      FOR /F "tokens=1,2,3,4 delims=; eol=#" %%G IN (file.csv) DO imapsync ^
+      FOR /F "tokens=1,2,3,4 delims=; eol=#" %%G IN (file.txt) DO imapsync ^
       --host1 imap.side1.org --user1 %%G --password1 %%H ^
       --host2 imap.side2.org --user2 %%I --password2 %%J ...
 
@@ -441,5 +442,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.456 2011/08/24 04:21:30 gilles Exp gilles $
+    $Id: imapsync,v 1.463 2011/11/12 21:58:52 gilles Exp gilles $
 
