--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.101 2011/08/24 06:50:30 gilles Exp gilles $
+# $Id: TODO,v 1.103 2011/11/12 21:59:35 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -22,6 +22,7 @@ http://www.linux-france.org/prj/imapsync_list/msg00307.html
 Evaluate 
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
+
 
 Find a way to avoid passwords in --debugimap unless needed.
 
@@ -161,6 +162,11 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Add --subscribe by default.
+
+DONE. Ask Nick Czeczulin why he wrote patent "Method for mailbox migration"
+http://www.google.com/patents/about?id=qI_IAAAAEBAJ
 
 DONE. Add --search option allowing to select messages with any IMAP SEARCH command.
 
